[gd_scene load_steps=2 format=3 uid="uid://n1y6vfnoqvuc"]

[ext_resource type="Script" path="res://hud.gd" id="1_ov2ks"]

[node name="HUD" type="Node2D"]
script = ExtResource("1_ov2ks")

[node name="Score" type="Label" parent="."]
offset_right = 1280.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="HealthLabel" type="Label" parent="."]
offset_left = 40.0
offset_top = 640.0
offset_right = 148.0
offset_bottom = 685.0
theme_override_font_sizes/font_size = 30
text = "Health:"

[node name="HealthValue" type="Label" parent="."]
offset_left = 160.0
offset_top = 640.0
offset_right = 268.0
offset_bottom = 685.0
theme_override_font_sizes/font_size = 30
text = "0"

[node name="Start" type="Button" parent="."]
offset_left = 500.0
offset_top = 300.0
offset_right = 602.0
offset_bottom = 363.0
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="Quit" type="Button" parent="."]
offset_left = 680.0
offset_top = 300.0
offset_right = 771.0
offset_bottom = 363.0
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="GameOver" type="Label" parent="."]
offset_top = 180.0
offset_right = 1280.0
offset_bottom = 266.0
theme_override_font_sizes/font_size = 60
text = "GAME OVER"
horizontal_alignment = 1

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
